{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 69,
  "lineage": "43bd4afe-8a46-1947-11f4-f1cdd8a3f5ea",
  "resources": [
    {
      "module": "module.demo_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:569720260742:security-group/sg-066fc42b3e1c86cfd",
            "description": "Security group for LiveEO demo with open SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Egress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066fc42b3e1c86cfd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "api ports",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh ports",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "liveEO_demo-20220703193459276000000001",
            "name_prefix": "liveEO_demo-",
            "owner_id": "569720260742",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "Name": "liveEO_demo",
              "Owner": "Sai",
              "Project": "LiveEO"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "liveEO_demo",
              "Owner": "Sai",
              "Project": "LiveEO"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0ca0a9bb3bd46bd08"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.demo_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress Rule",
            "from_port": 0,
            "id": "sgrule-2419594536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-066fc42b3e1c86cfd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_sg.aws_security_group.this",
            "module.demo_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.demo_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ssh ports",
            "from_port": 22,
            "id": "sgrule-1796436436",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-066fc42b3e1c86cfd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_sg.aws_security_group.this",
            "module.demo_sg.aws_security_group.this_name_prefix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "api ports",
            "from_port": 8000,
            "id": "sgrule-728519162",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-066fc42b3e1c86cfd",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.demo_sg.aws_security_group.this",
            "module.demo_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance-liveEO-demo",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06eedde62c331e7e1",
            "arn": "arn:aws:ec2:us-east-1:569720260742:instance/i-040a98ba61a492741",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-040a98ba61a492741",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01571a942c4a6dd6f",
            "private_dns": "ip-172-31-88-170.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.88.170",
            "public_dns": "ec2-18-207-244-224.compute-1.amazonaws.com",
            "public_ip": "18.207.244.224",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-023d20fbffcf347e7",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "security_groups": [
              "liveEO_demo-20220703193459276000000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed32636419edf0d0",
            "tags": {
              "Environment": "demo",
              "Name": "liveEO_demo",
              "Owner": "Sai",
              "Project": "LiveEO"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "liveEO_demo",
              "Owner": "Sai",
              "Project": "LiveEO"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "liveEO_demo"
            },
            "vpc_security_group_ids": [
              "sg-066fc42b3e1c86cfd"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.demo_sg.aws_security_group.this",
            "module.demo_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}